fjord-compiler/test/errors/Frugal.fj
module errors.Frugal

record Message
  content : String


frugal : Message -* (Message, Message)
frugal m =
  (m, m)

